--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,17 @@
-Host *
-  AddKeysToAgent yes
-  UseKeychain yes
-  IdentityFile ~/.ssh/id_rsa
+
+Host msft.com
+    HostName github.com
+    User git
+    IdentityFile ~/.ssh/id_ed25519
+
+# Added by Krypton
+Host timng.com
+    HostName github.com
+    User git
+	IdentityAgent ~/.kr/krd-agent.sock
+	ProxyCommand /opt/homebrew/bin/krssh %h %p
+	IdentityFile ~/.ssh/id_krypton
+	IdentityFile ~/.ssh/id_ed25519
+	IdentityFile ~/.ssh/id_rsa
+	IdentityFile ~/.ssh/id_ecdsa
+	IdentityFile ~/.ssh/id_dsa
