Default is github

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,7 +5,7 @@ Host msft.com
     IdentityFile ~/.ssh/id_ed25519
 
 # Added by Krypton
-Host timng.com
+Host github.com
     HostName github.com
     User git
 	IdentityAgent ~/.kr/krd-agent.sock
