Update config comments

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,7 @@
 
+# This is for Microsoft repos
+# When cloning, change clone name to git@msft.com
+# This then uses the appropriate SSH key
 Host msft.com
     HostName github.com
     User git
