update path for krssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -12,7 +12,7 @@ Host github.com
     HostName github.com
     User git
 	IdentityAgent ~/.kr/krd-agent.sock
-	ProxyCommand /opt/homebrew/bin/krssh %h %p
+	ProxyCommand krssh %h %p
 	IdentityFile ~/.ssh/id_krypton
 	IdentityFile ~/.ssh/id_ed25519
 	IdentityFile ~/.ssh/id_rsa
