Update MSFT with secretive.

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,7 +5,7 @@
 Host msft.com
     HostName github.com
     User git
-    IdentityFile ~/.ssh/id_ed25519
+    IdentityAgent ~/Library/Containers/com.maxgoedjen.Secretive.SecretAgent/Data/socket.ssh
 
 # Added by Krypton
 Host github.com
