--- a/alacritty.yml
+++ b/alacritty.yml
@@ -245,7 +245,7 @@ live_config_reload: true
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-  program: {{.machine.brew_path}}/tmux
+  program: /usr/local/bin/tmux
   args: [new, -A, -s, console]
     # Startup directory
     #
