Update tmux colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,3 +16,6 @@ set-option -g status-position top
 # bind - split-window -h
 
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# https://unix.stackexchange.com/questions/60968/tmux-bottom-bar-color-change
+set -g status-bg "#005fff"
